update test set generator
I deleted old `prep.*` test set generation file and updated `test_dataset_generator.ipynb` to prepare test set to be uploaded to HuggingFace. By changing the variable `max_images_per_class`, you can select the test set size.

--- a/test_dataset_generator.ipynb
+++ b/test_dataset_generator.ipynb
@@ -11,25 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "89c7b0a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "from fastai.vision.all import *\n",
-    "from torch.utils.data import Dataset\n",
-    "import struct\n",
-    "from torchvision.transforms.functional import to_pil_image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46d8face",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = untar_data(URLs.IMAGENETTE_320,data=Path.cwd()/'data')"
+    "import torch\n",
+    "import os\n",
+    "import random\n",
+    "\n",
+    "from export import serialize_fp32\n",
+    "\n",
+    "# Select number of images include to test set\n",
+    "max_images_per_class = 20"
    ]
   },
   {
@@ -37,226 +32,63 @@
    "id": "3842e7e9",
    "metadata": {},
    "source": [
-    "We will eventually generate raw tensor binary files for C runtime as a `test` dataset. Those files have a file extension `.bin`. The name of parent direcotries have been already encoded from `0` to `9` accordingly. So we need to modify `ImageBlock` and `get_y` to support a newly generated `test` dataset. And we set up that before `test` dataset is generated."
+    "We will eventually generate raw tensor binary files for C runtime as a `test` dataset. Those files have a file extension `.bin`. The name of parent direcotries have been already encoded from `0` to `9` accordingly."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "46a133f6",
+   "id": "3e0b88c7",
    "metadata": {},
    "source": [
-    "Usually `ImageBlock` takes care of most of image file conversion but in our case eventually we'll get a raw tensor binary files for a test dataset. To deal all of them in an unified way, we need to implement our file loader below."
+    "## Generating test set\n",
+    "Testset will be saved to huggingface, so you need to clone the repository."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07022d17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ImageTensorLoader(Transform):\n",
-    "    def encodes(self, fn:Path):\n",
-    "        fn = str(fn)\n",
-    "        if fn.lower().endswith('.jpg') or fn.lower().endswith('.jpeg'):\n",
-    "            return PILImage.create(fn)\n",
-    "        elif fn.lower().endswith('.bin'):\n",
-    "            with open(fn, 'rb') as f:\n",
-    "                x = struct.unpack(f'{3*224*224}f', f.read())\n",
-    "            x = torch.tensor(x).view(3, 224, 224)\n",
-    "            mean, std = [torch.tensor(o).view(3,1,1) for o in imagenet_stats]\n",
-    "            x = x * std + mean\n",
-    "            return PILImage.create(to_pil_image(x))\n",
-    "        else:\n",
-    "            raise Exception(f'Unknown file type for {fn}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a026b1e",
-   "metadata": {},
-   "source": [
-    "Not only with a custom file loader, we use encoded `label`s for raw tensor binary files. If the `label` is numerical value from `0` to `9`, they should be decoded back to the original `label` to align with the original jpeg datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe6a0e93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = L(o for o in get_files(path) if str(o).lower().endswith('jpeg') or str(o).lower().endswith('jpg'))\n",
-    "vocab = list(set(o.parent.name for o in x))\n",
-    "i2o = {i:o for i, o in enumerate(vocab)}\n",
-    "\n",
-    "def my_parent_label(fn:Path):\n",
-    "    pa = parent_label(fn)\n",
-    "    return i2o[int(pa)] if pa.isdigit() else pa    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa315691",
-   "metadata": {},
-   "source": [
-    "Here, we'll build up our own dataloader to handle the original jpeg files and raw tensor binary files at once, although we still haven't generated such raw tensor binary files yet. The original jpeg files for either `train` or `valid` dataset and newly generated raw tensor binary files for `test` dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49056046",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = DataBlock(\n",
-    "    blocks=(TransformBlock(type_tfms=ImageTensorLoader), CategoryBlock),\n",
-    "    get_items=get_files,\n",
-    "    splitter=GrandparentSplitter(valid_name='val'),\n",
-    "    get_y=my_parent_label,\n",
-    "    item_tfms=Resize(224)\n",
-    ")\n",
-    "dls = db.dataloaders(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de77d367",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learn = vision_learner(dls, resnet18, metrics=accuracy, pretrained=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a39930f6",
-   "metadata": {},
-   "source": [
-    "If model parameters were saved in a file previously, load those previously trained parameters. Otherwise, run `finetune` and save those newly trained parameters into a file for the future use."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87b70b80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fn = path/'model.pth'\n",
-    "if os.path.exists(fn):\n",
-    "    learn.model.load_state_dict(torch.load(fn))\n",
-    "else:\n",
-    "    learn.fine_tune(1)\n",
-    "    torch.save(learn.model.state_dict(), fn)    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29a86468",
-   "metadata": {},
-   "source": [
-    "We'll generate `test` dataset while running inference for `validation` dataset. `test` dataset is augmented from `valid` dataset and stored in `tensor` format for C runtimes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a68b7eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class SaveImageFilesCallback(Callback):\n",
-    "    def __init__(self, save_dir, ncat=10, nitems=100):\n",
-    "        self.save_dir = save_dir\n",
-    "        self.ncat = ncat\n",
-    "        self.counts = [0] * int(nitems/ncat)\n",
-    "        for i in range(self.ncat):\n",
-    "            os.makedirs(save_dir/str(i), exist_ok=True)\n",
-    "   \n",
-    "    def after_batch(self):\n",
-    "        if self.learn.training or self.learn.model.training:\n",
-    "            return\n",
-    "        for X,y in zip(self.learn.xb[0], self.learn.y):\n",
-    "            if self.counts[y] >= self.ncat:\n",
-    "                continue\n",
-    "            \n",
-    "            fn = f'{str(self.save_dir)}/{y.item()}/{self.counts[y]}'\n",
-    "            with open(fn+'.bin', \"wb\") as f:\n",
-    "                f.write(struct.pack('f'*X.numel(), *X.flatten()))                \n",
-    "            \n",
-    "            self.counts[y] += 1\n",
-    "            if sum(self.counts)==self.ncat*len(self.dls.vocab):\n",
-    "                break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f75aff84",
+   "execution_count": 130,
+   "id": "efb0c7a9",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>\n",
-       "    /* Turns off some styling */\n",
-       "    progress {\n",
-       "        /* gets rid of default border in Firefox and Opera. */\n",
-       "        border: none;\n",
-       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-       "        background-size: auto;\n",
-       "    }\n",
-       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
-       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
-       "    }\n",
-       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-       "        background: #F44336;\n",
-       "    }\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7min, sys: 1min 45s, total: 8min 45s\n",
-      "Wall time: 1min 58s\n"
+      "fatal: destination path 'imagenette2-320' already exists and is not an empty directory.\r\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(#2) [337.6174621582031,0.10140127688646317]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%%time\n",
-    "learn.validate(cbs=SaveImageFilesCallback(path/'test'))"
+    "!git clone https://huggingface.co/datasets/ninjalabo/imagenette2-320"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "142c2f87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the Imagenette dataset\n",
+    "path = untar_data(URLs.IMAGENETTE_320,data=Path.cwd()/'data')\n",
+    "dls = ImageDataLoaders.from_folder(path, valid='val', item_tfms=Resize(224),\n",
+    "                                   batch_tfms=Normalize.from_stats(*imagenet_stats),)\n",
+    "\n",
+    "# Initialize counters to track saved images per class\n",
+    "saved_counts = {str(i): 0 for i in range(10)}\n",
+    "\n",
+    "for imgs, labels in dls.valid:\n",
+    "    for img, label in zip(imgs, labels):\n",
+    "        label = str(label.item())  # Convert label to string\n",
+    "        if saved_counts[label] < max_images_per_class:\n",
+    "            dst_dir = os.path.join(\"imagenette2-320/test\", label)\n",
+    "            file_path = os.path.join(dst_dir, f'{saved_counts[label]}.bin')\n",
+    "            with open(file_path, \"wb\") as f:\n",
+    "                serialize_fp32(f, img)\n",
+    "            saved_counts[label] += 1\n",
+    "    # Stop if all classes have 10 images\n",
+    "    if all(count >= max_images_per_class for count in saved_counts.values()):\n",
+    "        break"
    ]
   },
   {
@@ -269,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "2cd08fc3",
    "metadata": {},
    "outputs": [
@@ -277,23 +109,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[38;5;5mdata/imagenette2-320/test\u001b[0m\n",
-      "├── \u001b[38;5;5m0\u001b[0m\n",
-      "├── \u001b[38;5;5m1\u001b[0m\n",
-      "├── \u001b[38;5;5m2\u001b[0m\n",
-      "├── \u001b[38;5;5m3\u001b[0m\n",
-      "├── \u001b[38;5;5m4\u001b[0m\n",
-      "├── \u001b[38;5;5m5\u001b[0m\n",
-      "├── \u001b[38;5;5m6\u001b[0m\n",
-      "├── \u001b[38;5;5m7\u001b[0m\n",
-      "├── \u001b[38;5;5m8\u001b[0m\n",
-      "└── \u001b[38;5;5m9\u001b[0m\n",
+      "\u001b[01;34mdata/imagenette2-320/test\u001b[0m\n",
+      "├── \u001b[01;34m0\u001b[0m\n",
+      "├── \u001b[01;34m1\u001b[0m\n",
+      "├── \u001b[01;34m2\u001b[0m\n",
+      "├── \u001b[01;34m3\u001b[0m\n",
+      "├── \u001b[01;34m4\u001b[0m\n",
+      "├── \u001b[01;34m5\u001b[0m\n",
+      "├── \u001b[01;34m6\u001b[0m\n",
+      "├── \u001b[01;34m7\u001b[0m\n",
+      "├── \u001b[01;34m8\u001b[0m\n",
+      "└── \u001b[01;34m9\u001b[0m\n",
       "\n",
-      "10 directories\n",
-      "-rw-rw-r-- 1 doyu doyu 602112 Apr 23 11:37 data//imagenette2-320/test/2/3.bin\n",
-      "-rw-rw-r-- 1 doyu doyu 602112 Apr 23 11:37 data//imagenette2-320/test/2/7.bin\n",
-      "-rw-rw-r-- 1 doyu doyu 602112 Apr 23 11:37 data//imagenette2-320/test/6/3.bin\n",
-      "-rw-rw-r-- 1 doyu doyu 602112 Apr 23 11:37 data//imagenette2-320/test/6/7.bin\n"
+      "11 directories\n",
+      "-rw-r--r--  1 harukadoyu  staff  602112 May 16 13:57 data//imagenette2-320/test/2/3.bin\n",
+      "-rw-r--r--  1 harukadoyu  staff  602112 May 16 13:58 data//imagenette2-320/test/2/7.bin\n",
+      "-rw-r--r--  1 harukadoyu  staff  602112 May 16 13:35 data//imagenette2-320/test/6/3.bin\n",
+      "-rw-r--r--  1 harukadoyu  staff  602112 May 16 13:36 data//imagenette2-320/test/6/7.bin\n"
      ]
     }
    ],
@@ -304,38 +136,82 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9201a76",
+   "id": "42d05d9f",
    "metadata": {},
    "source": [
-    "save `learner` to use later, and then, load `learner` & run inference for `test` dataset"
+    "## Testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e5c421dc",
+   "execution_count": 139,
+   "id": "493a91a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn.export()\n",
-    "learn = load_learner(path/'export.pkl')"
+    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import Dataset\n",
+    "\n",
+    "from train import load\n",
+    "\n",
+    "class TensorDataset(Dataset):\n",
+    "    def __init__(self, root_dir):\n",
+    "        self.root_dir = root_dir\n",
+    "        self.classes = sorted(os.listdir(root_dir))\n",
+    "        self.file_paths = []\n",
+    "        self.labels = []\n",
+    "        for label in self.classes:\n",
+    "            label_dir = os.path.join(root_dir, label)\n",
+    "            files = os.listdir(label_dir)\n",
+    "            for file in files:\n",
+    "                self.file_paths.append(os.path.join(label_dir, file))\n",
+    "                self.labels.append(int(label))\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.file_paths)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        with open(self.file_paths[idx], \"rb\") as f:\n",
+    "            nch, h, w = 3, 224, 224\n",
+    "            tensor = torch.tensor(struct.unpack(\"f\"*nch*h*w, f.read())).view(nch,h,w)\n",
+    "        label = self.labels[idx]\n",
+    "        return tensor, label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "63d92ab4",
+   "execution_count": 135,
+   "id": "4e1d2bdc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7b7fdc1a0a184649bcf04ec6b7c064a4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 4 files:   0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "test_dl = dls.test_dl(get_files(path, extensions=['.bin']), with_labels=True)"
+    "learn = load(\"resnet18\")\n",
+    "learn.dls = DataLoaders(DataLoader([]), test_dl)\n",
+    "test_dl = DataLoader(TensorDataset(\"imagenette2-320/test/\"), batch_size=32, num_workers=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3d9675ff",
-   "metadata": {},
+   "execution_count": 136,
+   "id": "f022a1d6",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -375,26 +251,75 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 61.5 ms, sys: 100 ms, total: 162 ms\n",
+      "Wall time: 866 ms\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(#2) [382.3768310546875,0.10000000149011612]"
+       "(#2) [0.07589495182037354,0.9700000286102295]"
       ]
      },
-     "execution_count": null,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%time\n",
+    "learn.model.cpu()\n",
     "learn.validate(dl=test_dl)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f7439ed",
+   "metadata": {},
+   "source": [
+    "## Upload updated dataset to HuggingFace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "25762d2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment this to update test data set\n",
+    "#!cd imagenette2-320/ & git add test & git commit -m \"update test set\" & git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8abb6d24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
