--- a/export.ipynb
+++ b/export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "8c4f6d8b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "98446256",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "e8ed7cab",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "74840945",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "de6ec66e",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "76139411",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "8e29ffa9",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "fdbbe72d",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "6a09db19",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "71f18915",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "8e696dc1",
    "metadata": {},
    "outputs": [
@@ -453,12 +453,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "id": "8ae52be9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#|export\n",
     "class Quantizer():\n",
     "    def __init__(self):\n",
     "        architecture = platform.machine().lower()\n",
@@ -472,13 +472,13 @@
     "        _ = [model_prepared(xb.to('cpu')) for xb, _ in calibration_dls.valid]\n",
     "\n",
     "        return model_prepared, convert_fx(model_prepared)\n",
-    "    \n",
+    "\n",
     "# FIX: find the reason ResNet50 fails."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "106b2a94",
    "metadata": {},
    "outputs": [],
@@ -519,14 +519,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 33,
    "id": "1ce87232",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "364aa703841644a6a303c2fe3b15e1f0",
+       "model_id": "88dc2dce995b4f76847f6db7c1455af0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -541,8 +541,7 @@
    "source": [
     "# Unit test for find_input_activation_indices\n",
     "def test_find_input_activation_indices():\n",
-    "    learn = load(\"resnet18\")\n",
-    "    _, indices = find_input_activation_indices(learn.model, [\"Conv2d\", \"Linear\"])\n",
+    "    _, indices = find_input_activation_indices(load(\"resnet18\").model, [\"Conv2d\", \"Linear\"])\n",
     "    assert indices == [0, 2, 3, 5, 6, 8, 9, 8, 12, 13, 15, 16, 15, 19, 20, 22, 23, 22, 26, 27, 35, 38]\n",
     "\n",
     "test_find_input_activation_indices()"
@@ -550,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "id": "411080cf",
    "metadata": {},
    "outputs": [],
@@ -625,7 +624,7 @@
     "        f.write(struct.pack(\"fi\", scaling_factor, zero_point))\n",
     "\n",
     "    # write layers' quantized weights and biases\n",
-    "    _, activation_indices = find_input_activation_indices(model1, [\"Conv2d\", \"ConvReLU2d\", \"Linear\", \"LinearReLU\"])\n",
+    "    _, activation_indices = find_input_activation_indices(model_prepared, [\"Conv2d\", \"ConvReLU2d\", \"Linear\", \"LinearReLU\"])\n",
     "    for i, l in enumerate([*conv_layers, *linear_layers]):\n",
     "        serialize_int8(f, l.weight().int_repr()) # save the tensor in int8\n",
     "        if l.bias:\n",
@@ -646,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 29,
    "id": "eff507d3",
    "metadata": {},
    "outputs": [],
@@ -657,14 +656,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 30,
    "id": "29866972",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a52442b962f487b9d109917d1df6b8d",
+       "model_id": "34be2985eadf48ebaaca7d4ff59b54f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -696,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32c9d2a4",
+   "id": "81972863",
    "metadata": {},
    "outputs": [],
    "source": []
