--- a/export.ipynb
+++ b/export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "8c4f6d8b",
    "metadata": {},
    "outputs": [],
@@ -453,8 +453,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8ae52be9",
+   "execution_count": 39,
+   "id": "50946098",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,16 +469,15 @@
     "    def quantize(self, model, calibration_dls):\n",
     "        x, _ = calibration_dls.valid.one_batch()\n",
     "        model_prepared = prepare_fx(model.eval(), self.qconfig, x)\n",
-    "        _ = [model_prepared(xb.to('cpu')) for xb, _ in calibration_dls.valid]\n",
+    "        with torch.no_grad():\n",
+    "            _ = [model_prepared(xb.to('cpu')) for xb, _ in calibration_dls.valid]\n",
     "\n",
-    "        return model_prepared, convert_fx(model_prepared)\n",
-    "\n",
-    "# FIX: find the reason ResNet50 fails."
+    "        return model_prepared, convert_fx(model_prepared)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "106b2a94",
    "metadata": {},
    "outputs": [],
@@ -519,37 +518,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "id": "1ce87232",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88dc2dce995b4f76847f6db7c1455af0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching 4 files:   0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Unit test for find_input_activation_indices\n",
     "def test_find_input_activation_indices():\n",
-    "    _, indices = find_input_activation_indices(load(\"resnet18\").model, [\"Conv2d\", \"Linear\"])\n",
+    "    _, indices = find_input_activation_indices(learn.model, [\"Conv2d\"])\n",
     "    assert indices == [0, 2, 3, 5, 6, 8, 9, 8, 12, 13, 15, 16, 15, 19, 20, 22, 23, 22, 26, 27, 35, 38]\n",
     "\n",
-    "test_find_input_activation_indices()"
+    "#test_find_input_activation_indices()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "411080cf",
    "metadata": {},
    "outputs": [],
@@ -645,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "eff507d3",
    "metadata": {},
    "outputs": [],
@@ -656,14 +640,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "29866972",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34be2985eadf48ebaaca7d4ff59b54f4",
+       "model_id": "1f910b48d3114850ba4774e115319945",
        "version_major": 2,
        "version_minor": 0
       },
@@ -673,13 +657,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wrote modelq8.bin\n"
-     ]
     }
    ],
    "source": [
@@ -687,18 +664,10 @@
     "#path = untar_data(URLs.IMAGENETTE_320, data=Path.cwd()/'data')\n",
     "#dls = ImageDataLoaders.from_folder(path, valid='val', item_tfms=Resize(224),\n",
     "#                                   batch_tfms=Normalize.from_stats(*imagenet_stats), bs=64)\n",
-    "#learn = load(\"resnet18\")\n",
+    "#learn = load(\"resnet50\")\n",
     "#model_prepared, qmodel = Quantizer().quantize(learn.model, dls)\n",
     "#export_modelq8_static(qmodel, model_prepared)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81972863",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
