add zero point support in dynamic quantization
- I modified `export_modelq8` function to export quantized parameters with or without zero point based on given `asymmetric` (True or False) parameter.
- I added new pointer `zp` to `QuantizedTensor` struct which stores zero point values. If quatized tensor doesn't have zero point, this `zp` is `NULL`.
- `runq.c` can now read either to use zero points or not from exported model file. If zero point is enabled, the inference allocates memory for `zp` in `QuantizedTensor`.
- Each function that receives `QuantizedTensor` first checks if `zp` is `NULL` or not (i.e. does tensor use zero point) and then executes corresponding operations.
- I disabled few tests that compiles `runq.c` with `func_q_arm.c` and `func_q_x86.c`, because I haven't implemented zero point configurable functions in these files and functions in the files will be replaced by oneDNN functions later, in similar way as static quantization inference is done.

--- a/export.ipynb
+++ b/export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 528,
    "id": "8c4f6d8b",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 529,
    "id": "98446256",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 530,
    "id": "e8ed7cab",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 531,
    "id": "74840945",
    "metadata": {},
    "outputs": [],
@@ -113,59 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "de6ec66e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#|export\n",
-    "def quantize_q80(w, group_size):\n",
-    "    '''\n",
-    "    Take a tensor and returns the Q8_0 quantized version\n",
-    "    i.e. symmetric quantization into int8, range [-127,127]\n",
-    "    '''\n",
-    "    assert w.numel() % group_size == 0\n",
-    "    ori_shape = w.shape\n",
-    "    w = w.float() # convert to float32\n",
-    "    w = w.reshape(-1, group_size)\n",
-    "    # find the max in each group\n",
-    "    wmax = torch.abs(w).max(dim=1).values\n",
-    "    # calculate the scaling factor such that float = quant * scale\n",
-    "    scale = wmax / 127.0\n",
-    "    # scale into range [-127, 127]\n",
-    "    quant = w / scale[:,None]\n",
-    "    # round to nearest integer\n",
-    "    int8val = torch.round(quant).to(torch.int8)\n",
-    "    # dequantize by rescaling\n",
-    "    fp32val = (int8val.float() * scale[:,None]).view(-1)\n",
-    "    fp32valr = fp32val.reshape(-1, group_size)\n",
-    "    # calculate the max error in each group\n",
-    "    err = torch.abs(fp32valr - w).max(dim=1).values\n",
-    "    # find the max error across all groups\n",
-    "    maxerr = err.max().item()\n",
-    "    return int8val, scale, maxerr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "76139411",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Unit test for quantize_q80\n",
-    "def test_quantize_q80():\n",
-    "    w0 = torch.tensor([0,1,2,3], dtype=torch.float32)\n",
-    "    w1, scale, err = quantize_q80(w0, 2)\n",
-    "    assert (w1==torch.tensor([0,127,85,127], dtype=torch.int8).reshape(2,2)).all()\n",
-    "    #FIXME: check scale & err too?\n",
-    "    \n",
-    "test_quantize_q80()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 532,
    "id": "8e29ffa9",
    "metadata": {},
    "outputs": [],
@@ -230,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 533,
    "id": "fdbbe72d",
    "metadata": {},
    "outputs": [
@@ -272,7 +220,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 545,
+   "id": "e7be64ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "def quantize_q8_symm(w, group_size):\n",
+    "    '''\n",
+    "    Get tensor and quantize it in group sizes.\n",
+    "    Symmetric quantization into int8, range [-127,127]\n",
+    "    '''\n",
+    "    assert w.numel() % group_size == 0\n",
+    "    ori_shape = w.shape\n",
+    "    w = w.float() # convert to float32\n",
+    "    w = w.reshape(-1, group_size)\n",
+    "    # find the max in each group\n",
+    "    wmax = torch.abs(w).max(dim=1).values\n",
+    "    # calculate the scaling factor such that float = quant * scale\n",
+    "    scale = wmax / 127.0\n",
+    "    # scale into range [-127, 127]\n",
+    "    quant = w / scale[:,None]\n",
+    "    # round to nearest integer\n",
+    "    int8val = torch.round(quant).to(torch.int8)\n",
+    "    # dequantize by rescaling\n",
+    "    fp32val = (int8val.float() * scale[:,None]).view(-1)\n",
+    "    fp32valr = fp32val.reshape(-1, group_size)\n",
+    "    # calculate the max error in each group\n",
+    "    err = torch.abs(fp32valr - w).max(dim=1).values\n",
+    "    # find the max error across all groups\n",
+    "    maxerr = err.max().item()\n",
+    "    return int8val, scale, maxerr\n",
+    "\n",
+    "def quantize_q8_asymm(w, group_size):\n",
+    "    '''\n",
+    "    Get tensor and quantize it in group sizes.\n",
+    "    Asymmetric quantization into int8, range [-128,127]\n",
+    "    NOTE: accuracy may drop obviuosly if group size is 1\n",
+    "    '''\n",
+    "    assert w.numel() % group_size == 0\n",
+    "    if group_size==1:\n",
+    "        print(\"Warning: A group_size of 1 may result in low inference accuracy.\")\n",
+    "    ori_shape = w.shape\n",
+    "    w = w.float() # convert to float32\n",
+    "    w = w.reshape(-1, group_size)\n",
+    "    # find min an max in each group\n",
+    "    wmax = w.max(dim=1).values\n",
+    "    wmin = w.min(dim=1).values\n",
+    "    # calculate the scaling factor and zero point such that float = (quant - zero_point) * scale\n",
+    "    scale = (wmax - wmin) / 255.0\n",
+    "    scale[scale == 0] = 1e-4   # handle zero division, don't decrease because precision is limited in inference\n",
+    "    zero_point = torch.round(-128 - wmin / scale)\n",
+    "    # scale into range [-128, 127]\n",
+    "    quant = w / scale[:,None] + zero_point[:,None]\n",
+    "    # round to nearest integer\n",
+    "    int8val = torch.clamp(torch.round(quant), -128, 127).to(torch.int8)\n",
+    "    # dequantize by rescaling\n",
+    "    fp32val = ((int8val.float() - zero_point[:,None]) * scale[:,None]).view(-1)\n",
+    "    fp32valr = fp32val.reshape(-1, group_size)\n",
+    "    # calculate the max error in each group\n",
+    "    err = torch.abs(fp32valr - w).max(dim=1).values\n",
+    "    # find the max error across all groups\n",
+    "    maxerr = err.max().item()\n",
+    "    return int8val, scale, zero_point, maxerr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 535,
+   "id": "283f95c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unit test for quantize_q8_symm and quantize_q8_asymm\n",
+    "def test_quantize_q8_symm():\n",
+    "    w0 = torch.tensor([0, 1, 2, 3], dtype=torch.float32)\n",
+    "    w1, scale, err = quantize_q8_symm(w0, 2)\n",
+    "    assert (w1==torch.tensor([0, 127, 85, 127], dtype=torch.int8).reshape(2,2)).all()\n",
+    "    assert (scale == torch.tensor([1 / 127, 3 / 127])).all()\n",
+    "    \n",
+    "def test_quantize_q8_asymm():\n",
+    "    w0 = torch.tensor([0, 1, 2, 3], dtype=torch.float32)\n",
+    "    w1, scale, zero_p, err = quantize_q8_asymm(w0, 2)\n",
+    "    assert (w1==torch.tensor([-128, 127, -128, 127], dtype=torch.int8).reshape(2,2)).all()\n",
+    "    assert (scale == torch.tensor([1 / 255, 1 / 255])).all()\n",
+    "    assert (zero_p == torch.tensor([-128, -638])).all()\n",
+    "    \n",
+    "test_quantize_q8_symm()\n",
+    "test_quantize_q8_asymm()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
    "id": "6a09db19",
    "metadata": {},
    "outputs": [],
@@ -286,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 546,
    "id": "71f18915",
    "metadata": {},
    "outputs": [],
@@ -305,11 +345,12 @@
     "        factors = list(divisors(dim)) # give the factors of number \"dim\"\n",
     "        return min(factors, key=lambda x: abs(x - gs)) # find the closest number to group size\n",
     "\n",
-    "def export_modelq8(model, file_path=\"modelq8.bin\", gs=64):\n",
+    "def export_modelq8(model, file_path=\"modelq8.bin\", gs=64, asymmetric=True):\n",
     "    '''\n",
     "    Export the quantized model to a file\n",
     "    The data inside the file follows this order:\n",
-    "    1. The number of: classes, each type of layers and parameters\n",
+    "    1. The number of: classes, each type of layers and parameters +\n",
+    "    is quantization symmetric or asymmetric\n",
     "    2. CNN, FC and BN layers' configuration\n",
     "    3. CNN and FC layers' quantized parameters\n",
     "    4. CNN and FC layers' scaling factors\n",
@@ -326,12 +367,13 @@
     "    nbn = len(bn_layers)\n",
     "    nclasses = 10\n",
     "    nparameters = sum(p.numel() for layer in [*conv_layers, *linear_layers] for p in layer.parameters())\n",
-    "    header = struct.pack(\"5i\", nclasses, nconv, nlinear, nbn, nparameters)\n",
+    "    header = struct.pack(\"6i\", nclasses, nconv, nlinear, nbn, nparameters, int(asymmetric))\n",
     "    f.write(header)\n",
     "    # write layers' config\n",
     "    qoffset = 0 # offset for quantized parameters\n",
-    "    soffset = 0 # offset for scaling factors\n",
+    "    soffset = 0 # offset for scaling factors (and zero points if asymmetric)\n",
     "    group_sizes = [] # save group sizes of each layer\n",
+    "    offset_coef = 2 if asymmetric else 1 # coef for calculating offset\n",
     "    for l in conv_layers:\n",
     "        # calculates group sizes for weights and biases\n",
     "        gs_weight = calculate_groupsize(l.in_channels * l.kernel_size[0]**2, gs)\n",
@@ -346,10 +388,10 @@
     "        nweights = l.out_channels * l.in_channels * l.kernel_size[0]**2\n",
     "        if l.bias is not None:\n",
     "            qoffset += nweights + l.out_channels\n",
-    "            soffset += nweights // gs_weight + l.out_channels // gs_bias\n",
+    "            soffset += offset_coef * (nweights // gs_weight + l.out_channels // gs_bias)\n",
     "        else:\n",
     "            qoffset += nweights\n",
-    "            soffset += nweights // gs_weight\n",
+    "            soffset += offset_coef * (nweights // gs_weight)\n",
     "\n",
     "    for l in linear_layers:\n",
     "        gs_weight = calculate_groupsize(l.in_features, gs)\n",
@@ -363,10 +405,10 @@
     "        nweights = l.in_features * l.out_features\n",
     "        if l.bias is not None:\n",
     "            qoffset += nweights + l.out_features\n",
-    "            soffset += nweights // gs_weight + l.out_features // gs_bias\n",
+    "            soffset += offset_coef * (nweights // gs_weight + l.out_features // gs_bias)\n",
     "        else:\n",
     "            qoffset += nweights\n",
-    "            soffset += nweights // gs_weight   \n",
+    "            soffset += offset_coef * (nweights // gs_weight)\n",
     "\n",
     "    for l in bn_layers:\n",
     "        f.write(struct.pack(\"2i\", l.num_features, soffset))\n",
@@ -374,20 +416,29 @@
     "        soffset += 4 * l.num_features\n",
     "\n",
     "    # write layers' parameters\n",
-    "    ew = []\n",
-    "    scaling_factors = []\n",
+    "    ew = []   # list for errors\n",
+    "    scales = []   # list for scales\n",
+    "    zero_points = []  # list for zero points if asymmetric\n",
     "    i = 0\n",
     "    for l in [*conv_layers, *linear_layers]:\n",
     "        for p in l.parameters():\n",
-    "            q, s, err = quantize_q80(p, group_sizes[i])\n",
+    "            if asymmetric:\n",
+    "                q, s, zp, err = quantize_q8_asymm(p, group_sizes[i])\n",
+    "                zero_points.append(zp)\n",
+    "            else:\n",
+    "                q, s, err = quantize_q8_symm(p, group_sizes[i])\n",
+    "\n",
     "            serialize_int8(f, q) # save the tensor in int8\n",
-    "            scaling_factors.append(s)\n",
+    "            scales.append(s)\n",
     "            ew.append((err, p.shape))\n",
     "            i += 1\n",
     "            print(f\"Quantized {tuple(p.shape)} to Q8_0 with max error {err}\")\n",
     "\n",
-    "    for s in scaling_factors:\n",
-    "        serialize_fp32(f, s) # save scale factors\n",
+    "    # save scales (and zero points if asymmetric)\n",
+    "    assert len(scales) == len(zero_points) or not asymmetric\n",
+    "    for i in range(len(scales)):\n",
+    "        serialize_fp32(f, scales[i])\n",
+    "        serialize_int32(f, zero_points[i]) if asymmetric else None\n",
     "\n",
     "    for l in bn_layers:\n",
     "        for p in [l.weight, l.bias, l.running_mean, l.running_var]:\n",
@@ -402,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 538,
    "id": "8e696dc1",
    "metadata": {},
    "outputs": [
@@ -417,6 +468,14 @@
       "Quantized (2,) to Q8_0 with max error 5.929917097091675e-05\n",
       "Quantized (1, 2) to Q8_0 with max error 0.0011622309684753418\n",
       "max quantization group error across all weights: 0.0012641102075576782\n",
+      "wrote /tmp/.test.bin\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0005489364266395569\n",
+      "Quantized (1,) to Q8_0 with max error 2.2806227207183838e-05\n",
+      "Quantized (1, 1, 3, 3) to Q8_0 with max error 0.0012386888265609741\n",
+      "Quantized (2, 3) to Q8_0 with max error 0.0003489851951599121\n",
+      "Quantized (2,) to Q8_0 with max error 1.0531395673751831e-05\n",
+      "Quantized (1, 2) to Q8_0 with max error 0.0009789764881134033\n",
+      "max quantization group error across all weights: 0.0012386888265609741\n",
       "wrote /tmp/.test.bin\n"
      ]
     }
@@ -445,15 +504,17 @@
     "def test_export_modelq8():\n",
     "    fname = '/tmp/.test.bin'\n",
     "    mpath = \"test.pt\"\n",
-    "    export_modelq8(m, fname, gs=10)\n",
-    "    assert os.path.getsize(fname)==261\n",
+    "    export_modelq8(m, fname, gs=10, asymmetric=False)\n",
+    "    assert os.path.getsize(fname)==265\n",
+    "    export_modelq8(m, fname, gs=10, asymmetric=True)\n",
+    "    assert os.path.getsize(fname)==293\n",
     "\n",
     "test_export_modelq8()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 539,
    "id": "50946098",
    "metadata": {},
    "outputs": [],
@@ -477,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 540,
    "id": "106b2a94",
    "metadata": {},
    "outputs": [],
@@ -518,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 541,
    "id": "1ce87232",
    "metadata": {},
    "outputs": [],
@@ -533,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 542,
    "id": "411080cf",
    "metadata": {},
    "outputs": [],
