--- a/test_all.ipynb
+++ b/test_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "92120998",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "96cc7f58",
    "metadata": {},
    "outputs": [],
@@ -79,14 +79,18 @@
     "    assert np.allclose(res, ref, atol=1e-5, rtol=0), \"run.c: Probabilities are not close.\"\n",
     "\n",
     "    if quantized:\n",
-    "        # run quantized model test with group size = 1 and 2 in test mode\n",
-    "        export_modelq8(model, file_path=\"modelq8_1.bin\", gs=1)\n",
+    "        # test quantized model with group size = 1\n",
+    "        export_modelq8(model, file_path=\"modelq8_1.bin\", gs=1, asymmetric=False)\n",
     "        resq1 = execute([\"./runq\", \"test\", \"modelq8_1.bin\", file_path])\n",
-    "        assert np.allclose(resq1, ref, atol=1e-5, rtol=0), \"runq.c (group size = 1): Probabilities are not close.\"\n",
-    "\n",
-    "        export_modelq8(model, file_path=\"modelq8_2.bin\", gs=2)\n",
+    "        assert np.allclose(resq1, ref, atol=1e-5, rtol=0), \"runq.c (symmteric, group size = 1): Probabilities are not close.\"\n",
+    "        # group size = 1\n",
+    "        export_modelq8(model, file_path=\"modelq8_2.bin\", gs=2, asymmetric=False)\n",
     "        resq2 = execute([\"./runq\", \"test\", \"modelq8_2.bin\", file_path])\n",
-    "        assert np.allclose(resq2, ref, atol=2e-2, rtol=0), \"runq.c (group size = 2):Probabilities are not close.\"\n",
+    "        assert np.allclose(resq2, ref, atol=2e-2, rtol=0), \"runq.c (symmetric, group size = 2):Probabilities are not close.\"\n",
+    "        # asymmetric (i.e. using zero point) with group size = 1\n",
+    "        export_modelq8(model, file_path=\"modelq8_2.bin\", gs=10, asymmetric=True)\n",
+    "        resq10 = execute([\"./runq\", \"test\", \"modelq8_2.bin\", file_path])\n",
+    "        assert np.allclose(resq10, ref, atol=1e-1, rtol=0), \"runq.c (asymmetric, group size = 2):Probabilities are not close.\"\n",
     "\n",
     "    print(\"Done\")"
    ]
@@ -94,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f83328d6",
+   "id": "2f2d7370",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -116,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
